--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,5 +3,8 @@
 @import "mixins";
 @import "globals";
 @import "utilities";
+@import "layout";
+@import "buttons";
 @import "navbar";
 @import "landing";
+@import "form";
